--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@
 
 .container {
   margin: 0;
-  padding-top: 10vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,9 +27,10 @@
 
 .logo {
   font-size: 2.5em;
-  padding: 1.5em;
+  padding: 0.5em 1.5em;
   will-change: filter;
   transition: 0.75s;
+  line-height: 1.5em;
 }
 
 .row {
@@ -59,6 +59,10 @@ button {
 
 button {
   cursor: pointer;
+}
+
+.row>button {
+  width: 100px;
 }
 
 button:hover {
