--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 
 .logo {
   font-size: 2.5em;
-  padding: 0.5em 1.5em;
+  padding: 0.5em 2.5em;
   will-change: filter;
   transition: 0.75s;
   line-height: 1.5em;
@@ -62,7 +62,7 @@ button {
 }
 
 .row>button {
-  width: 100px;
+  min-width: 200px;
 }
 
 button:hover {
